<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_dark"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:clickable="false"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/muli_bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="50sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/user_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColor="@color/red"
        android:textColorHint="@color/light_red"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary"
        app:startIconTint="@color/primary"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:background="@drawable/edit_bg"
            android:textColor="@color/red"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/password_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColor="@color/red"
        android:textColorHint="@color/light_red"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/primary"
        app:startIconTint="@color/primary"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@drawable/edit_bg"
            android:textColor="@color/red"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="log in with cellphone number"
        android:drawableLeft="@drawable/phone_icon"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:textColor="@color/red"
        android:onClick="displayCellPhoneUnderConstruction"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="12sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:fontFamily="sans-serif"
            android:onClick="forgotPassword"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Create new account"
            android:onClick="register"
            android:fontFamily="sans-serif"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>



    <Button
        android:id="@+id/bt_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button2"
        app:backgroundTint="@color/primary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/haritage_ico"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Visit Mamaila heritage website"
            android:textColor="@color/dashboard_item_1"
            android:gravity="bottom"
            android:onClick="mamailaWebsite"
            android:id="@+id/tv_heritage"
            />


    </LinearLayout>


</LinearLayout>